--- a/concuPL.bib
+++ b/concuPL.bib
@@ -1494,3 +1494,15 @@ issn = "0890-5401",
 doi = "http://dx.doi.org/10.1006/inco.1995.1135",
 author = "J.C.M. Baeten and J.A. Bergstra and S.A. Smolka",
 }
+
+@book{h96,
+ author = {Hillston, Jane},
+ title = {A Compositional Approach to Performance Modelling},
+ year = {1996},
+ isbn = {0-521-57189-8},
+ publisher = {Cambridge University Press},
+ address = {New York, NY, USA},
+} 
+
+
+
