--- a/hiding.tex
+++ b/hiding.tex
@@ -81,7 +81,7 @@ of a given product.
 \edfn
 
 Finally, we have to prove that the
-operational semantics and the denotational semantics coincide.
+operational semantics and the denotational semantics are consistent.
 %
 The proof of the following result is an immediate consequence of Proposition~\ref{prop:appendixB} (see Appendix~\ref{appendixB}).
 %This is proven by the next result.
