--- a/testing.tex
+++ b/testing.tex
@@ -157,7 +157,7 @@ We now compare the last results with the ones obtained using \fodaPA~\cite{acl13
 and the cost extension \fodaPAc~\cite{clc16}.
 
 Specifically we want to compare the implementation performance
-between the probabilistic extension and the denotation denotational semantic module
+between the probabilistic extension and the denotational semantic module
 from \fodaPA~\cite{acl13}.
 
 \begin{figure}[t]
