--- a/appendix.tex
+++ b/appendix.tex
@@ -277,7 +277,7 @@
   Let $P\in\fodaPAp$, $\feature{A},\feature{B}\in\calF$, $s\in\calF^*$
   and $p\in(0,1)$. Then $P\vtranp{s\checkmark}{p}\nil$ if and only if
   $\require{A}{B}{P}\vtranp{s'\checkmark}p\nil$ and
-  $s'$ and it has some of the forms:
+  $s'$ and is in the form:
   $\f{A}\not\in s$ and $s'=s$, $\f{B}\in s$ and $s'=s$, or
   $\f{A}\in s$, $\f{B}\not\in s$ and $s'=s\cdot\f{B}$.
   \begin{proof}
@@ -369,8 +369,8 @@
         P\hideA\tran{\fB}_{r_1'}P_1'\hideA\vtran{s_1}_{r2}Q,\ \fB\in\calA\rbag
       \end{split}
     \end{displaymath}
-    Now for each $r_1'$, we can apply the inductive
-    method to each of the transitions
+    Now for each $r_1'$, we can apply the induction
+    hypothesis to each of the transitions
     $P_1'\hideA\vtran{s_1}_{r2}Q$ to obtain
     $r_2=\sum\lbag r2'\ |\ P_1\vtran{s_1'}Q,\
     s_1=s_1'\hideA\rbag$. Continuing the last equation:
