--- a/equivalence.tex
+++ b/equivalence.tex
@@ -2,7 +2,7 @@
 We have defined two different semantics for our language:
 the products derived from the operational semantics and the products
 obtained from the denotational semantics. It is important that
-both semantics coincide, so that we can chose the approach that suits
+both semantics are consistent, so that we can chose the approach that suits
 better in any moment. The proof of the following result is an immediate consequence of Lemmas~\ref{lem:pref}--\ref{lem:excl} (see Appendix~\ref{app:proofs} of the paper).
 
 \bprop\label{prop:DenoOpe}
