--- a/hiding.tex
+++ b/hiding.tex
@@ -91,8 +91,7 @@ The proof of the following result is an immediate consequence of Proposition~\re
 \eprop
 
 As usual in process algebras, it would be desirable that the hiding operator is \emph{derived}, that is, given a syntactic term, there exists a semantically equivalent term without occurrences of the hiding operator.
-The next proposition shows that  it is possible to \emph{remove} the hiding
-operator from any term. The idea is to substitute any occurrence of
+The idea is to substitute any occurrence of
 the hidden actions by the symbol $\bot$. However, it is necessary to take into account  that we cannot
 hide actions that appear in the restriction operators and, therefore, these cases are not contemplated. The proof of the following result is easy by structural induction and by Proposition~\ref{prop:hid}.
 
