--- a/syntax.tex
+++ b/syntax.tex
@@ -74,7 +74,7 @@ Let us note that the products of a term in \fodaPA\ will be computed following s
 The computation will finish when no further steps are allowed. 
 This fact is represented by the $\nil$ symbol. 
 We will introduce rules to compute a product, with this computation
-finishing when no further steps are required, a situation represented by~\nil
+finishing when no further steps are required, a situation represented by~\nil.
 During the computation of an \fodaPAp\ term,  we have 
 to represent the situation in which a \emph{valid product} 
 of the term has been computed. 
