Cambios menores de los comentarios de Mario

--- a/appendix.tex
+++ b/appendix.tex
@@ -277,7 +277,7 @@
   Let $P\in\fodaPAp$, $\feature{A},\feature{B}\in\calF$, $s\in\calF^*$
   and $p\in(0,1)$. Then $P\vtranp{s\checkmark}{p}\nil$ if and only if
   $\require{A}{B}{P}\vtranp{s'\checkmark}p\nil$ and
-  $s'$ and is in the form:
+  $s'$ is in the form:
   $\f{A}\not\in s$ and $s'=s$, $\f{B}\in s$ and $s'=s$, or
   $\f{A}\in s$, $\f{B}\not\in s$ and $s'=s\cdot\f{B}$.
   \begin{proof}
