--- a/introduction.tex
+++ b/introduction.tex
@@ -48,7 +48,7 @@ This  issue is solved by using \fodaPA~\cite{acl13}, a formal framework to repre
   \path (A) edge [-o,shorten >=-0.05em] node[draw=none] {Optional} (B.north)
         (C) edge [-*,shorten >=-0.05em] node[draw=none] {Mandatory} (D.north)
 
-        (G) edge [->]  node[draw=none, shift={(80:-0.5)}]{Choose 1} (F)
+        (G) edge [->]  node[draw=none, shift={(80:-0.5)}]{Choose-one} (F)
             edge [->]  node[draw=none] {} (I)  ;
 
 
