--- a/introduction.tex
+++ b/introduction.tex
@@ -332,7 +332,7 @@ The main contributions of this work can be summarized as:
 		
 	\item  A thorough empirical study, using different configurations to generate a wide-spectrum of variability models. The  study has been carried out in order to show the applicability and scalability of our approach. These variability models have been generated using BeTTy~\cite{SeguraHBC11}.
 	
-	\item A complete comparison between the overall implementation performance of the probabilistic extension and the denotational semantic module from \fodaPA~\cite{acl13}. The obtained results show that the denotational semantics of the probabilistic extension implementation dramatically improves the performance
+	\item A complete comparison between the overall implementation performance of the probabilistic extension and the denotational semantic implementation from \fodaPA~\cite{acl13}. The obtained results show that the denotational semantics of the probabilistic extension implementation dramatically improves the performance
 in comparison with the denotational semantics implementations presented in previous work.
 
 \end{itemize}
