--- a/operational.tex
+++ b/operational.tex
@@ -99,7 +99,7 @@ $\nombreRegla{con2}$,
 $\nombreRegla{con4}$ and 
 $\nombreRegla{con5}$,
 equitably distribute the probability between both
-branches, that is, $\frac{1}{2}$. We have preferred to use a simple definition of this operator, but it is easy to replace it by a more involved version of a probabilistic parallel operator~\cite{ahk98}.
+branches, that is, $\frac{1}{2}$. We have preferred to use a simple definition of this operator, but it is easy to replace it by a more involved version of a probabilistic conjunction operator~\cite{ahk98}.
 %
 Rule $\nombreRegla{con3}$ requires that both branches agree on the
 termination of a product.
