revision first part

--- a/concu.bib
+++ b/concu.bib
@@ -9848,7 +9848,7 @@ publisher="IEEE Computer Society"
 @inproceedings{cmm14a,
 author="M. A. Camacho and M. G. Merayo and I. {Medina-Bulo}",
 title="{PTTAC}: Una herramienta para testing pasivo de sistemas con comunicaciones as{\'\i}ncronas",
-booktitle="XIX Jornadas de Ingeniería del Software y Bases de Datos, JISBD'14",
+booktitle="XIX Jornadas de Ingenier\EDa del Software y Bases de Datos, JISBD'14",
 pages="219-222",
 year="2014"
 }
@@ -10089,15 +10089,7 @@ year = "2015"
 }
 
 
-@article{cln16,
-  author    = {C. Camacho and L. Llana and A. N{\'{u}}{\~{n}}ez},
-  title     = {Cost-related interface for software product lines},
-  journal   = {Journal of Logic and Algebraic Methods in Programming},
-  volume    = {85},
-  number    = {1},
-  pages     = {227--244},
-  year      = {2016},
-}
+
 
 @INCOLLECTION{ccm16,
   title={Intelligent Secure Communications between Systems},
@@ -13460,7 +13452,7 @@ title="Student perception and usage of an automated programming assessment tool"
 journal="Computers in Human Behavior",
 volume="31",
 number="1",
-pages="453–460",
+pages="453\96460",
 year="2014"
 }
 
@@ -15111,8 +15103,8 @@ publisher = {IEEE Computer Society}
 
 %Highlights
 %    The patterns of building information modeling warnings are investigated by applying the Pareto analysis.
-%    The Pareto analysis reveals that 15% of the warning messages are responsible for 80% of the warnings (15–80 rule).
-%    The schematic design phase indicates a different Pareto rule of 25–80 as well as a unique warning pattern.
+%    The Pareto analysis reveals that 15% of the warning messages are responsible for 80% of the warnings (15\9680 rule).
+%    The schematic design phase indicates a different Pareto rule of 25\9680 as well as a unique warning pattern.
 %    Time estimation for warning corrections is proposed based on learning curve theory.
 
 
