--- a/concuPL.bib
+++ b/concuPL.bib
@@ -536,6 +536,22 @@ language={English}
 	Title = {Formal Semantics and Verification for Feature Modeling},
 	Year = {2005}}
 
+@inproceedings{sa13,
+ author = {Sebastio, Stefano and Vandin, Andrea},
+ title = {MultiVeStA: Statistical Model Checking for Discrete Event Simulators},
+ booktitle = {Proceedings of the 7th International Conference on Performance Evaluation Methodologies and Tools},
+ series = {ValueTools '13},
+ year = {2013},
+ isbn = {978-1-936968-48-0},
+ location = {Torino, Italy},
+ pages = {310--315},
+ numpages = {6},
+ doi = {10.4108/icst.valuetools.2013.254377},
+ publisher = {ICST (Institute for Computer Sciences, Social-Informatics and Telecommunications Engineering)}
+} 
+
+
+
 @inproceedings{kkm06,
 	Author = {P. H{\"o}fner and R. Kh{\'e}dri and B. M{\"o}ller},
 	Booktitle = {14th International Symposium on Formal Methods, FM'06},
@@ -1437,6 +1453,20 @@ author = {R.J. Vanglabbeek and S.A. Smolka and B. Steffen},
 	publisher = {ACM}
 }
 
+@InProceedings{ln08,
+author="de Moura, Leonardo and Bjorner, Nikolaj",
+editor="Ramakrishnan, C. R. and Rehof, Jakob",
+title="Z3: An Efficient SMT Solver",
+booktitle="Tools and Algorithms for the Construction and Analysis of Systems",
+year="2008",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="337--340",
+isbn="978-3-540-78800-3"
+}
+
+
+
 @Inproceedings{tllv15,
 	author    = {ter Beek, Maurice H. and Legay, Axel and Lluch-Lafuente, Alberto and Vandin, Andrea},
 	year      = {2015},
@@ -1503,6 +1533,18 @@ author = "J.C.M. Baeten and J.A. Bergstra and S.A. Smolka",
  publisher = {Cambridge University Press},
  address = {New York, NY, USA},
 } 
+
+@Article{Chrszon2018,
+author="Chrszon, Philipp and Dubslaff, Clemens and Kl{\"u}ppelholz, Sascha and Baier, Christel",
+title="ProFeat: feature-oriented engineering for family-based probabilistic model checking",
+journal="Formal Aspects of Computing",
+year="2018",
+volume="30",
+number="1",
+pages="45--75",
+issn="1433-299X",
+doi="10.1007/s00165-017-0432-4"
+}
 
 
 
