--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,7 @@
 
 \documentclass{llncs}
 
+\usepackage{bm}
 \usepackage{amsfonts}
 \usepackage{amssymb,amsmath}
 \usepackage{graphicx}
@@ -75,6 +76,9 @@
 \input{abstract}
 
 \input{introduction}
+
+\input{intro_fodaa}
+
 \input{syntax}
 \input{operational}
 \input{consistency}
