--- a/testing.tex
+++ b/testing.tex
@@ -261,7 +261,7 @@ that the denotational semantics of the probabilistic
 extension implementation improves dramatically
 the performance
 in comparison with the denotational semantics implementations
-presented in previous works~\cite{acl13,cln16}.
+presented in previous works~\cite{acl13,clc16}.
 
 
 
