added related work section

--- a/intro_fodaa.tex
+++ b/intro_fodaa.tex
@@ -628,6 +628,13 @@ operators behavior, showing that once those rules are applied will be
 processed the auxiliary operators of \emph{hiding} and \emph{mandatory}
 respectively.
 
+For those binary operators defined initially in ~\cite{acl13}
+was proved they they are all
+commutative and associative,
+so forth, we can consider all those operators as
+n-ary operators.
+
+
 \subsection{$\fodaPA$ denotational semantics}
 \label{sec:foda:denotational}
 
